--- a/test.html
+++ b/test.html
@@ -7,14 +7,11 @@
     <link rel="stylesheet" href="/css/test.css" />
   </head>
   <body>
-    <div class="box-parent">
-      <div class="box">1</div>
-      <div class="box">2</div>
-      <div class="box">3</div>
-      <div class="box">4</div>
-      <div class="box">5</div>
-      <div class="box">6</div>
-      <div class="box">7</div>
+    <div class="flex-container">
+      <div class="item">1</div>
+      <div class="item">2</div>
+      <div class="item">3</div>
+      <div class="item">4</div>
     </div>
   </body>
 </html>
