--- a/test.html
+++ b/test.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="/css/test.css" />
   </head>
   <body>
-    <div class="flex-container">
-      <div class="item">1</div>
-      <div class="item">2</div>
-      <div class="item">3</div>
-      <div class="item">4</div>
+    <div class="parent">
+      <div class="item red"></div>
+      <div class="item green"></div>
+      <div class="item blue"></div>
     </div>
   </body>
 </html>
