--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </article>
               </li>
             </ul>
-            <button class="carousel-button" type="button">
+            <button class="carousel-button next" type="button">
               <svg width="16" height="16">
                 <use href="/images/icons.svg#icon-arrow"></use>
               </svg>
@@ -278,7 +278,14 @@
     </footer>
     <div class="backdrop">
       <div class="modal">
-        <button class="modal-btn-close" type="button">Close</button>
+        <svg class="modal-btn-close" width="32" height="32">
+          <use href="/images/icons.svg#closebtn"></use>
+        </svg>
+        <form name="contact-form" autocomplete="off" novalidate>
+          <h2>Замовити дзвінок</h2>
+          <p>Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
+          <input type="text" name="" id="" />
+        </form>
       </div>
     </div>
 
